--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-numpy==2.0.2
-pandas==2.2.2
-matplotlib==3.10.0
-scikit-learn==1.6.1
-imbalanced-learn==0.14.0
-tensorflow
+streamlit==1.50.0
+numpy>=2.1.0,<2.4.0
+pandas
+scikit-learn
+matplotlib
+seaborn
+joblib
+tensorflow==2.15.0
