--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ scikit-learn
 matplotlib
 seaborn
 joblib
+# include tensorflow only if your app actually needs to import it at runtime
 tensorflow==2.15.0
